AK - testing the CourseController I updated